--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.meta.xr.sdk.core": "62.0.0",
+    "com.meta.xr.sdk.all": "66.0.0",
+    "com.meta.xr.sdk.core": "66.0.0",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
