--- a/.gitattributes
+++ b/.gitattributes
@@ -45,3 +45,4 @@
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
 Assets/Fonts/MaokenAssortedSans[[:space:]]SDF.asset filter=lfs diff=lfs merge=lfs -text
+Assets/Fonts/MaokenAssortedSans[[:space:]]SDF[[:space:]]1.asset filter=lfs diff=lfs merge=lfs -text
